objects/Lead_Home__dll.object
<CustomObject>
    <fields>
        <fullName>AnnualRevenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CleanStatus__c</fullName>
        <label>Clean Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyDunsNumber__c</fullName>
        <label>Company D-U-N-S Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConvertedAccountId__c</fullName>
        <label>Converted Account ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConvertedContactId__c</fullName>
        <label>Converted Contact ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConvertedDate__c</fullName>
        <label>Converted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ConvertedOpportunityId__c</fullName>
        <label>Converted Opportunity ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <label>Created By ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailBouncedDate__c</fullName>
        <label>Email Bounced Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailBouncedReason__c</fullName>
        <label>Email Bounced Reason</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeocodeAccuracy__c</fullName>
        <label>Geocode Accuracy</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Lead ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdentityIsAMatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Identity Is A Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IdentityMatchId__c</fullName>
        <label>Identity Match Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdentityMatchType__c</fullName>
        <label>Identity Match Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdentityMatchWeight__c</fullName>
        <label>Identity Match Weight</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdentityMatchingObject__c</fullName>
        <label>Identity Matching Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdentityObject__c</fullName>
        <label>Identity Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsConverted__c</fullName>
        <label>Converted</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <label>Deleted</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsUnreadByOwner__c</fullName>
        <label>Unread By Owner</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JigsawContactId__c</fullName>
        <label>Jigsaw Contact ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jigsaw__c</fullName>
        <label>Data.com Key</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_Id__c</fullName>
        <label>KQ_Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_IdentityMatchId__c</fullName>
        <label>KQ_IdentityMatchId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastActivityDate__c</fullName>
        <label>Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <label>Last Modified By ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <label>Last Referenced Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <label>Last Viewed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <label>Lead Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MasterRecordId__c</fullName>
        <label>Master Record ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <label>Mobile Phone</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Full Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfEmployees__c</fullName>
        <label>Employees</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <label>Owner ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhotoUrl__c</fullName>
        <label>Photo URL</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>Zip/Postal Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SfdcOrganizationId__c</fullName>
        <label>SfdcOrganizationId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State/Province</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <label>System Modstamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdp_sys_SourceVersion__c</fullName>
        <label>cdp_sys_SourceVersion</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>